home_page_base_config

--- a/gadgets/front_end/templates/front_end/home_page.html
+++ b/gadgets/front_end/templates/front_end/home_page.html
@@ -1,14 +1,6 @@
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home_page</title>
-</head>
+{% block content %}
+<h2>THIS IS THE HOME_PAGE OF GADGETs</h2>
 
-<body>
-    <h1>THIS IS THE HOME_PAGE OF GADGETS</h1>
-</body>
-
-</html>
+{%endblock  %}
