--- a/gadgets/templates/base.html
+++ b/gadgets/templates/base.html
@@ -12,7 +12,7 @@
     {% block content %}
 
     {% endblock  %}
-    <h1>THIS IS THE ABOVE PART OF base_template OF GADGETS</h1>
+    <h1>THIS IS THE BELOW PART OF base_template OF GADGETS</h1>
 </body>
 
 </html>
