--- a/gadgets/front_end/templates/front_end/home_page.html
+++ b/gadgets/front_end/templates/front_end/home_page.html
@@ -17,7 +17,8 @@
                             <!-- Product name-->
                             <h5 class="fw-bolder">{{item.title}} </h5>
                             <!-- Product price-->
-                            Price: {{item.price}}
+                            <b>Price: {{item.price}}৳</b>
+                            <p> {{item.get_category_display}} </p>
                         </div>
                     </div>
                     <!-- Product actions-->
