product_details_view_added

--- a/gadgets/front_end/templates/front_end/product_detail.html
+++ b/gadgets/front_end/templates/front_end/product_detail.html
@@ -1,24 +1,15 @@
 {% extends 'base.html' %}
-{% block title %} GADGET'S HOME PAGE{% endblock title %}
+{% block title %} {{object.title}} {% endblock title %}
 
 {% block content %}
 
-<header class="bg-dark py-5">
-    <div class="container px-4 px-lg-5 my-5">
-        <div class="text-center text-white">
-            <h1 class="display-4 fw-bolder">Shop in style</h1>
-            <p class="lead fw-normal text-white-50 mb-0">With this shop hompeage template</p>
-        </div>
-    </div>
-</header>
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
         <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            {% for item in item_list %}
             <div class="col mb-5">
                 <div class="card shadow h-100">
                     <!-- Product image-->
-                    <img class="card-img-top p-2" src="{{item.image.url}}" alt="..." />
+                    <img class="card-img-top p-2" src="{{object.image.url}}" alt="..." />
                     <!-- Product details-->
                     <div class="card-body p-4">
                         <div class="text-center">
@@ -40,7 +31,6 @@
                     </div>
                 </div>
             </div>
-            {% endfor %}
         </div>
     </div>
 
