--- a/gadgets/front_end/templates/front_end/product_detail.html
+++ b/gadgets/front_end/templates/front_end/product_detail.html
@@ -5,32 +5,36 @@
 
 <section class="py-5">
     <div class="container px-4 px-lg-5 mt-5">
-        <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-            <div class="col mb-5">
-                <div class="card shadow h-100">
-                    <!-- Product image-->
-                    <img class="card-img-top p-2" src="{{object.image.url}}" alt="..." />
-                    <!-- Product details-->
-                    <div class="card-body p-4">
-                        <div class="text-center">
-                            <!-- Product name-->
-                            <h5 class="fw-bolder">{{item.title}} </h5>
-                            <!-- Product price-->
-                            {% if item.discount %}
-                            <p><del class="mt-2 text-danger">{{item.price}}৳</del>{{item.get_discount_price}}৳</p>
-                            {% else %}
-                            <p> {{item.price}}৳</p>
-                            {% endif %}
-                            <span class="badge rounder-pill bg-info">{{item.get_label_display}}</span>
-                            <p> {{item.get_category_display}} </p>
-                        </div>
-                    </div>
-                    <!-- Product actions-->
-                    <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
-                    </div>
+        <div class="row gx-md-5 justify-content-center">
+            <div class="col-md-4 md-5">
+                <!-- Product image-->
+                <img class="card-img-top p-2" src="{{object.image.url}}" alt="..." />
+                <!-- Product details-->
+            </div>
+
+
+            <div class="col-md-8 mb-5">
+                <h5 class="fw-bolder">{{item.title}} </h5>
+                <!-- Product price-->
+                {% if item.discount %}
+                <p><del class="mt-2 text-danger">{{item.price}}৳</del>{{item.get_discount_price}}৳</p>
+                {% else %}
+                <p> {{item.price}}৳</p>
+                {% endif %}
+                <span class="badge rounder-pill bg-info">{{item.get_label_display}}</span>
+                <span class="badge rounder-pill bg-info">{{item.get_category_display}}</span>
+                <p> {{item.description}} </p>
+            </div>
+
+            <!-- Product actions-->
+            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                <div class="text-center">
+                    <a class="btn btn-outline-dark mt-auto me-4" href="">Continue Shopping</a>
+                    <a class="btn btn-outline-dark mt-auto " href="#">Add To Cart<i class="bi-cart-fill me-1"></i></a>
                 </div>
             </div>
+
+            <!--div col-md-4 md-5for-->
         </div>
     </div>
 
