--- a/gadgets/front_end/templates/front_end/item_list.html
+++ b/gadgets/front_end/templates/front_end/item_list.html
@@ -36,7 +36,8 @@
                     </div>
                     <!-- Product actions-->
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                        <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                        <div class="text-center"><a class="btn btn-outline-dark mt-auto"
+                                href="{{item.get_item_url}}">Product Details</a></div>
                     </div>
                 </div>
             </div>
