--- a/gadgets/front_end/templates/front_end/product_detail.html
+++ b/gadgets/front_end/templates/front_end/product_detail.html
@@ -29,7 +29,8 @@
             <!-- Product actions-->
             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                 <div class="text-center">
-                    <a class="btn btn-outline-dark mt-auto me-4" href="">Continue Shopping</a>
+                    <a class="btn btn-outline-dark mt-auto me-4" href="{% url 'front_end:home_page' %}">Continue
+                        Shopping</a>
                     <a class="btn btn-outline-dark mt-auto " href="#">Add To Cart<i class="bi-cart-fill me-1"></i></a>
                 </div>
             </div>
