--- a/gadgets/templates/base.html
+++ b/gadgets/templates/base.html
@@ -28,18 +28,22 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="{% url 'front_end:home_page' %}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                    
+                    {% if user.is_authenticated %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
+                            data-bs-toggle="dropdown" aria-expanded="false">{{ user.get_username }}</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">All Products</a></li>
+                            <li><a class="dropdown-item" href="#!">Profile</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
-                            <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                            <li><a class="dropdown-item" href="##">New Arrivals</a></li>
+                            <li><a class="dropdown-item" href="{% url 'accounts:logout' %}">log out</a></li>
                         </ul>
                     </li>
+                    {% else %}
+                    <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">log in</a></li>
+                    {% endif %}
                 </ul>
                 <form class="d-flex">
                     <button class="btn btn-outline-dark" type="submit">
