--- a/gadgets/templates/signup.html
+++ b/gadgets/templates/signup.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<div class="container">
+<div class="container mb-5 mt-5">
     <form method="post">
         {% csrf_token %}
         {{form}}
