--- a/gadgets/front_end/templates/front_end/product_detail.html
+++ b/gadgets/front_end/templates/front_end/product_detail.html
@@ -31,7 +31,8 @@
                 <div class="text-center">
                     <a class="btn btn-outline-dark mt-auto me-4" href="{% url 'front_end:home_page' %}">Continue
                         Shopping</a>
-                    <a class="btn btn-outline-dark mt-auto " href="#">Add To Cart<i class="bi-cart-fill me-1"></i></a>
+                    <a class="btn btn-outline-dark mt-auto " href="{{ item.get_add_to_cart }}">Add To Cart<i
+                            class="bi-cart-fill me-1"></i></a>
                 </div>
             </div>
 
