--- a/gadgets/templates/base.html
+++ b/gadgets/templates/base.html
@@ -56,7 +56,14 @@
         </div>
     </nav>
     <!-- Header-->
-    
+    <div class="mt-5 pt-4">
+        {% if messages %}
+        <div class="alert alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close"><span>&times;</span></button>
+        </div>
+        {% endif %}
+    </div>
 
     {% block content %}
 
