--- a/gadgets/templates/base.html
+++ b/gadgets/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load cart_template_tag %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -46,11 +48,11 @@
                     {% endif %}
                 </ul>
                 <form class="d-flex">
-                    <button class="btn btn-outline-dark" type="submit">
+                    <a href="{% url 'front_end:summary' %}" class="btn btn-outline-dark" type="submit">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
-                        <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                    </button>
+                        <span class="badge bg-dark text-white ms-1 rounded-pill">{{ user|cart_count }}</span>
+                    </a>
                 </form>
             </div>
         </div>
@@ -58,10 +60,12 @@
     <!-- Header-->
     <div class="mt-5 pt-4">
         {% if messages %}
-        <div class="alert alert-dismissible fade show" role="alert">
+        {% for message in messages %}
+        <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
             {{ message }}
-            <button type="button" class="close"><span>&times;</span></button>
+            <button type="button" class="close" data-dismiss="alert" aria-hidden="true"><span>&times;</span></button>
         </div>
+        {% endfor %} 
         {% endif %}
     </div>
 
