shipping_add_done

--- a/gadgets/front_end/templates/front_end/summary.html
+++ b/gadgets/front_end/templates/front_end/summary.html
@@ -48,7 +48,8 @@
                 </tr>
 
                 <tr>
-                    <td colspan="5"><a href="#" class="btn btn-warning float-end m-4">Proceed to Checkout</a>
+                    <td colspan="5"><a href="{% url 'front_end:shipping_address' %}"
+                            class="btn btn-warning float-end m-4">Proceed to Checkout</a>
                         <a href="/" class="btn btn-warning float-end m-4">Continue shopping</a>
                     </td>
 
