stripe_payment_template_added

--- a/gadgets/front_end/templates/front_end/cart_snipet.html
+++ b/gadgets/front_end/templates/front_end/cart_snipet.html
@@ -7,7 +7,7 @@
     {% for order_item in order.items.all %}
     <li class="'list-group-item d-flex justify-content-between lh-condensed">
         <div class="container">
-            <div class="row">
+            <div class="form-floating mb-3">
                 <div class="my-0">{{order_item.quantity}} X {{order_item.item.short_title}}</div>
                 <div class="w-100"></div>
             </div>
