order_history_added

--- a/gadgets/front_end/templates/front_end/cart_snipet.html
+++ b/gadgets/front_end/templates/front_end/cart_snipet.html
@@ -22,4 +22,6 @@
         <strong>{{order.total_price}}</strong>
     </li>
 
+    <a href="{% url 'front_end:payment' %}" class="btn btn-warning m-3">Make Payment</a>
+
 </ul>
