--- a/gadgets/templates/base.html
+++ b/gadgets/templates/base.html
@@ -36,7 +36,7 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">{{ user.get_username }}</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#!">Profile</a></li>
+                            <li><a class="dropdown-item" href="{% url 'front_end:order_history'%}">Order History</a></li>
                             <li>
                                 <hr class="dropdown-divider" />
                             </li>
